# WickedEngine

./: ._.gitignore  .gitignore  CMakeLists.txt  stb_ds.h  vulkan-portability-future.md
Common_3/Application/Fonts/Shaders/FSL/: resources.h
Common_3/Application/Screenshot/: Screenshot.cpp
Editor/: CMakeLists.txt
Samples/Example_ImGui/: CMakeLists.txt  Example_ImGui.cpp  Example_ImGui.h
Samples/Example_ImGui_Docking/: CMakeLists.txt  Example_ImGui_Docking.cpp  Example_ImGui_Docking.h
Samples/Template_Windows/: CMakeLists.txt
Samples/Tests/: CMakeLists.txt
Samples/WickedGraphicsSubset/: CMakeLists.txt  METAL_DRAWINDIRECT_NOTES.md  VISIBILITY_PIPELINE_PATHS.md
Samples/WickedGraphicsSubset/src/: frame_tagged_heap_allocator.h  platform_window_helpers.h  platform_window_helpers_apple.mm  platform_window_helpers_stub.cpp  wicked_runtime_apple.mm  wicked_runtime_stubs.cpp  wicked_shadercompiler_support_stubs.cpp  wicked_subset_cube_demo.cpp  wicked_subset_cube_indirect_compare_demo.cpp  wicked_subset_cube_indirect_compare_frame_buffered_demo.cpp  wicked_subset_frame_buffering.h  wicked_subset_sdl_work_stealing_jobsystem.h  wicked_subset_visibility_pipeline_benchmark.cpp  wicked_subset_visibility_pipeline_frame_buffered_benchmark.cpp
Samples/WickedGraphicsSubset/src/shaders/: wicked_subset_cube_demo.hlsl  wicked_subset_cube_indirect_compare_demo.hlsl  wicked_subset_shader_compat.hlsli  wicked_subset_visibility_pipeline_benchmark.hlsl
WickedEngine/: CMakeLists.txt  CommonInclude.h  EngineConfig.h  offlineshadercompiler.cpp  wiApplication.cpp  wiApplication.h  wiApplication_BindLua.cpp  wiArchive.cpp  wiArchive.h  wiBacklog.cpp  wiBacklog.h  wiEmittedParticle.cpp  wiEmittedParticle.h  wiFFTGenerator.cpp  wiFFTGenerator.h  wiFadeManager.h  wiFont.cpp  wiFont.h  wiGPUBVH.cpp  wiGPUBVH.h  wiGPUSortLib.cpp  wiGPUSortLib.h  wiGUI.cpp  wiGUI.h  wiGaussianSplatModel.cpp  wiGaussianSplatModel.h  wiGraphics.h  wiGraphicsDevice.h  wiGraphicsDevice_DX12.cpp  wiGraphicsDevice_DX12.h  wiGraphicsDevice_Metal.cpp  wiGraphicsDevice_Metal.h  wiGraphicsDevice_Vulkan.cpp  wiGraphicsDevice_Vulkan.h  wiHairParticle.cpp  wiHairParticle.h  wiHelper.cpp  wiHelper.h  wiImage.cpp  wiImage.h  (+46 more)
WickedEngine/shaders/ffx-fsr2/: ._._ffx_core.h
forge-mmgr/: ._NoMemoryDefines.h
forge-mmgr/FluidStudios/MemoryManager/: ._mmgr.c  mmgr.c  mmgr.h  mmgr_new_delete.cpp
